# OMEGA-MATH

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXTRACTION_REPORT.md  HYPER_DEEP_AUDIT_REPORT_2026_04_06.md  LICENSE  PROTOCOL.md  README.md  README.ru.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: omega-math-review.agent.md  omega-math.agent.md
.github/prompts/: erdos-straus-experiment.prompt.md  kobon-triangles-experiment.prompt.md  omega-math-status.prompt.md  thomson-problem-experiment.prompt.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  scorecard.yml  sync-einstein-arena.yml  validate.yml
Docs/: EXTRACTION_REPORT.md
agents/: analyst.yaml  experimentalist.yaml  librarian.yaml  planner.yaml  prover.yaml  reviewer.yaml  team.yaml  writer.yaml
docs/protocol/: agent-teams.md  evidence-governance.md  experiment-ledger-spec.md  lean-bootstrap.md  literature-adapter.md  operator-runbook.md  orchestrator-contract.md  research-intelligence-stack.md  research-object-packaging.md  solver-execution-adapter.md  triage-matrix.md  verification-pipeline.md
docs/reports/: EXTRACTION_REPORT.md  HYPER_DEEP_AUDIT_REPORT_2026_04_06.md  HYPER_DEEP_AUDIT_REPORT_2026_04_17.md
docs/research/: OMEGA_100_100_UPGRADE_PROMPT_2026_04_04.md  OMEGA_6_PHASE_EXECUTION_PLAN_2026_04_05.md  OMEGA_ACADEMIC_AUDIT_REPORT_2026_04_09.md  OMEGA_ASSURANCE_SCOPE_MATRIX_2026_04_05.md  OMEGA_COMPETITIVE_ANALYSIS.md  OMEGA_DEVELOPMENT_ROADMAP_2026_04_05.md  OMEGA_FRENZYMATH_EXTRACTION_2026_04_16.md  OMEGA_HYPER_DEEP_AUDIT_2026_04_04.md  OMEGA_INDIE_GTM_PLAYBOOK.md  OMEGA_INTERNAL_EVIDENCE_PACKET_2026_04_05.md  OMEGA_INVESTMENT_AND_MONETIZATION.md  OMEGA_LOCAL_WORKSTATION_VIBE_PROVING_STACK_2026_04_04.md  OMEGA_MARKET_AND_SOURCE_LEDGER_2026_04_05.md  OMEGA_PROJECT_OVERVIEW_AND_NAMING.md  OMEGA_SEED_NARRATIVE_2026_04_05.md  OMEGA_SIMULA_EXTRACTION_2026_04_21.md  OMEGA_SOTA_BIBLIOGRAPHY_2026_04_05.md  OMEGA_SOTA_LANDSCAPE_UPDATE_2026_04_13.md  OMEGA_UNICORN_PITCH_DECK.md  (+3 more)
llm/: README.md
protocol/: agent-teams.md  amenability-rubric.md  cas-execution-adapter.md  evidence-governance.md  experiment-ledger-spec.md  lean-bootstrap.md  lean-execution-adapter.md  literature-adapter.md  operator-runbook.md  orchestrator-contract.md  prover-result-contract.md  publication-workflow.md  research-intelligence-stack.md  runtime-language-strategy.md  synthetic-reasoning-packets.md  triage-matrix.md  verification-pipeline.md
registry/: index.yaml  schema.json  triage-matrix.yaml
reports/: omega_execution_maturity_report_v1.json  omega_ft_scaffold_gate_report_v1.json  omega_runtime_evidence_report_v1.json
research/: OMEGA_100_100_UPGRADE_PROMPT_2026_04_04.md  OMEGA_6_PHASE_EXECUTION_PLAN_2026_04_05.md  OMEGA_COMPETITIVE_ANALYSIS.md  OMEGA_DEVELOPMENT_ROADMAP_2026_04_05.md  OMEGA_FRENZYMATH_EXTRACTION_2026_04_16.md  OMEGA_HYPER_ARCHITECTURE_2076.md  OMEGA_HYPER_DEEP_AUDIT_2026_04_04.md  OMEGA_INTERNAL_EVIDENCE_PACKET_2026_04_05.md  OMEGA_OPEN_SOURCE_STACK.md  OMEGA_SOTA_BIBLIOGRAPHY_2026_04_05.md  OMEGA_SOTA_FORMAL_PROVING_LANDSCAPE_2026_04_05.md
scripts/: agent_orchestrator.py  cas-adapter.py  cas_adapter.py  einstein_arena_adapter.py  experiment_query.py  export_execution_maturity.py  export_ft_scaffold_gate.py  export_runtime_baseline.py  generate-experiment-index.py  generate-index.py  generate_experiment_index.py  generate_index.py  import_einstein_arena.py  lean-adapter.py  lean_adapter.py  leancop_bridge.py  literature_adapter.py  model_router.py  omega-runner.py  omega-workflow.py  omega_runner.py  omega_workflow.py  proof_repair_loop.py  query-experiments.py  scaffold-problem.py  scaffold_problem.py  solver-adapter.py  solver_adapter.py  validate-registry.py  validate_registry.py  verify_evidence.py  verify_version_sync.py
templates/: reproducibility-manifest.md  short-note.tex  survey-memo.tex  synthetic-evaluation-packet.md  synthetic-reasoning-taxonomy.md
tests/: test_agent_orchestrator.py  test_cas_adapter.py  test_e2e_pipeline.py  test_einstein_arena_adapter.py  test_experiment_query.py  test_export_execution_maturity.py  test_export_ft_scaffold_gate.py  test_flagship_experiments.py  test_import_einstein_arena.py  test_lean_adapter.py  test_leancop_bridge.py  test_literature_adapter.py  test_model_router.py  test_omega_runner.py  test_omega_workflow.py  test_proof_repair_loop.py  test_python_surface.py  test_registry_e2e.py  test_registry_pipeline.py  test_scaffold_problem.py  test_solver_adapter.py  test_verify_evidence.py  test_version_sync.py
(+113 files in other folders)
